--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "seed": "node seeds/index.js"
+    "start": "npm run seed && node server.js",
+    "seed": "node seeds/seed.js"
   },
   "author": "",
   "license": "ISC",
